# ros-experiments-src

./: CMakeLists.txt  README.md  package.xml
experiments_logs/: execution_time  global_pose  ground_truth  map  tt.m
experiments_logs/gmcl_bag_ser_8000/: execution_time  global_pose  ground_truth  map
include/als_bag_player_node/: als_bag_player.h
include/als_logger_bag_node/: als_logger_bag.h
include/als_logger_sim_node/: als_logger_sim.h
include/cbgl_bag_player_node/: cbgl_bag_player.h
include/cbgl_logger_bag_node/: cbgl_logger_bag.h
include/cbgl_logger_sim_node/: cbgl_logger_sim.h
include/gmcl_bag_player_node/: gmcl_bag_player.h
include/gmcl_logger_bag_node/: gmcl_logger_bag.h
include/gmcl_logger_sim_node/: gmcl_logger_sim.h
include/mcl_logger_sim_node/: mcl_logger_sim.h
launch/: als_logger_sim.launch  avanti_bag.launch  avanti_bag_sota_gmcl.launch  avanti_sim.launch  avanti_sim_sota_als.launch  avanti_sim_sota_gmcl.launch  avanti_sim_sota_mcl.launch  cbgl.launch  cbgl_bag_player.launch  cbgl_logger_bag.launch  cbgl_logger_sim.launch  gmcl_logger_bag.launch  gmcl_logger_sim.launch  laser_tf.launch  laser_tf_cbgl.launch  load_map.launch  mcl_logger_sim.launch
src/als_bag_player_node/: CMakeLists.txt  als_bag_player.cpp  als_bag_player_node.cpp
src/als_logger_bag_node/: CMakeLists.txt  als_logger_bag.cpp  als_logger_bag_node.cpp
src/als_logger_sim_node/: CMakeLists.txt  als_logger_sim.cpp  als_logger_sim_node.cpp
src/cbgl_bag_player_node/: CMakeLists.txt  cbgl_bag_player.cpp  cbgl_bag_player_node.cpp
src/cbgl_logger_bag_node/: CMakeLists.txt  cbgl_logger_bag.cpp  cbgl_logger_bag_node.cpp
src/cbgl_logger_sim_node/: CMakeLists.txt  cbgl_logger_sim.cpp  cbgl_logger_sim_node.cpp
src/cbgl_node/: CMakeLists.txt
src/gmcl_logger_bag_node/: CMakeLists.txt  gmcl_logger_bag.cpp  gmcl_logger_bag_node.cpp
src/gmcl_logger_sim_node/: CMakeLists.txt  gmcl_logger_sim.cpp  gmcl_logger_sim_node.cpp
src/mcl_logger_sim_node/: CMakeLists.txt  mcl_logger_sim.cpp  mcl_logger_sim_node.cpp
